--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'http://developer.huawei.com/repo/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath 'com.huawei.agconnect:agcp:1.2.0.300'
+        classpath 'com.huawei.agconnect:agcp:1.2.1.301'
+        classpath("com.archinamon:android-gradle-aspectj:4.1.0")
     }
 }
 
