--- a/testapplication/build.gradle
+++ b/testapplication/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.huawei.agconnect'
+apply plugin: 'com.archinamon.aspectj'
 
 android {
     compileSdkVersion 29
