--- a/testapplication/build.gradle
+++ b/testapplication/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation project(":maps-wrapper")
+
+    implementation 'net.bytebuddy:byte-buddy-android:1.10.10'
 }
