--- a/maps-wrapper/build.gradle
+++ b/maps-wrapper/build.gradle
@@ -17,8 +17,8 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.huawei.hms:maps:4.0.1.302'
+    api 'com.google.android.gms:play-services-maps:17.0.0'
+    api 'com.huawei.hms:maps:4.0.1.302'
 
     testImplementation 'junit:junit:4.12'
 }
