--- a/testapplication/build.gradle
+++ b/testapplication/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'net.bytebuddy:byte-buddy-android:1.8.0'
+    implementation 'net.bytebuddy:byte-buddy-android:1.10.10'
+
+    implementation project(':maps-wrapper')
 }
