--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,18 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url 'http://developer.huawei.com/repo/' }
+        flatDir dirs: 'gradle/plugin'
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath 'com.huawei.agconnect:agcp:1.2.1.301'
-        classpath("com.archinamon:android-gradle-aspectj:4.1.0")
+
+        // TODO Fix with real plugin when AndroidX error fixed
+        classpath("org.aspectj:aspectjrt:1.9.4")
+        classpath("org.aspectj:aspectjtools:1.9.4")
+        classpath("com.archinamon:android-gradle-aspectj:4.1.0.1")
     }
 }
 
