--- a/testapplication/build.gradle
+++ b/testapplication/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation project(":maps-wrapper")
 }
